# ts-bridge

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: daemon-design.md
scripts/: install.ps1  install.sh
src/: documents.rs  lib.rs  main.rs  server.rs
src/api/: mod.rs
src/config/: mod.rs
src/process/: mod.rs
src/protocol/: diagnostics.rs  mod.rs
src/protocol/text_document/: code_action.rs  code_action_resolve.rs  completion.rs  completion_resolve.rs  definition.rs  did_change.rs  did_close.rs  did_open.rs  document_highlight.rs  document_symbol.rs  formatting.rs  hover.rs  implementation.rs  inlay_hint.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  type_definition.rs
src/protocol/workspace/: execute_command.rs  mod.rs  rename.rs  symbol.rs
src/provider/: mod.rs
src/rpc/: mod.rs  queue.rs
src/types/: mod.rs
src/utils/: mod.rs
tests/: definition_source.rs  version_cli.rs
