[package]
name = "ts-lsp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
log = "0.4.29"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
url = "2.5.7"
which = "8.0.0"
